import React from 'react';
import ShallowRenderer from 'react-test-renderer/shallow';

import ActivityShareThumbnail from '.';

const renderer = new ShallowRenderer();


describe('ActivityShareThumbnail post component', () => {
  let props;

  beforeEach(() => {
    props = {
      actor: {
        displayName: 'Marty McFly'
      },
      file: {
        displayName: 'testImage.js',
        url: 'http://cisco.com',
        fileSize: 1472837,
        objectType: 'js'
      },
      isFetching: true,
      isPending: false,
      objectUrl: 'blob:localhost/testFile',
      onDownloadClick: jest.fn(),
      timestamp: '12:10 PM',
      type: 'file'
    };
  });

  it('renders loading state properly', () => {
    renderer.render(<ActivityShareThumbnail {...props} />);
    const component = renderer.getRenderOutput();

    expect(component).toMatchSnapshot();
  });

  it('renders thumbnail properly', () => {
    props.isFetching = true;
    renderer.render(<ActivityShareThumbnail {...props} />);
    const component = renderer.getRenderOutput();

    expect(component).toMatchSnapshot();
  });

  it('renders pending properly', () => {
    props.isPending = true;
    renderer.render(<ActivityShareThumbnail {...props} />);
    const component = renderer.getRenderOutput();

    expect(component).toMatchSnapshot();
  });

  it('renders loaded thumbnail properly', () => {
    props.isFetching = false;
    renderer.render(<ActivityShareThumbnail {...props} />);
    const component = renderer.getRenderOutput();

    expect(component).toMatchSnapshot();
  });
});
