// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityShareThumbnail post component renders loaded thumbnail properly 1`] = `
<div
  className="webex-activity-share-item shareItem"
>
  <div
    className="webex-share-thumbnail thumbnail"
  >
    <ContentItem
      actionNode={
        <div>
          <ForwardRef(ContextTransform(Button))
            ariaLabel="Download testImage.js"
            circle={true}
            onClick={[Function]}
            size={32}
            style={
              Object {
                "backgroundColor": "black",
              }
            }
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color="white"
              description=""
              name="icon-arrow-tail-down_12"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            />
          </ForwardRef(ContextTransform(Button))>
        </div>
      }
      aspect={null}
      className=""
      content="blob:localhost/testFile"
      failedText=""
      fileSize="1.47 MB"
      gifIcon=""
      height={null}
      icon="icon-document_72"
      isProtected={false}
      loading={false}
      loadingText="Loading"
      style={null}
      subtitle="Marty McFly, 12:10 PM"
      title="testImage.js"
      type="file"
      width={null}
    />
  </div>
</div>
`;

exports[`ActivityShareThumbnail post component renders loading state properly 1`] = `
<div
  className="webex-activity-share-item shareItem"
>
  <div
    className="webex-share-thumbnail thumbnail"
  >
    <ContentItem
      actionNode={
        <div>
          <ForwardRef(ContextTransform(Button))
            ariaLabel="Download testImage.js"
            circle={true}
            onClick={[Function]}
            size={32}
            style={
              Object {
                "backgroundColor": "black",
              }
            }
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color="white"
              description=""
              name="icon-arrow-tail-down_12"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            />
          </ForwardRef(ContextTransform(Button))>
        </div>
      }
      aspect={null}
      className=""
      content="blob:localhost/testFile"
      failedText=""
      fileSize="1.47 MB"
      gifIcon=""
      height={null}
      icon="icon-document_72"
      isProtected={false}
      loading={true}
      loadingText="Loading"
      style={null}
      subtitle="Marty McFly, 12:10 PM"
      title="testImage.js"
      type="file"
      width={null}
    />
  </div>
</div>
`;

exports[`ActivityShareThumbnail post component renders pending properly 1`] = `
<div
  className="webex-activity-share-item shareItem"
>
  <div
    className="webex-share-thumbnail thumbnail"
  >
    <ContentItem
      actionNode=""
      aspect={null}
      className=""
      content="blob:localhost/testFile"
      failedText=""
      fileSize="1.47 MB"
      gifIcon=""
      height={null}
      icon="icon-document_72"
      isProtected={false}
      loading={true}
      loadingText="Loading"
      style={null}
      subtitle="Marty McFly, 12:10 PM"
      title="testImage.js"
      type="file"
      width={null}
    />
  </div>
</div>
`;

exports[`ActivityShareThumbnail post component renders thumbnail properly 1`] = `
<div
  className="webex-activity-share-item shareItem"
>
  <div
    className="webex-share-thumbnail thumbnail"
  >
    <ContentItem
      actionNode={
        <div>
          <ForwardRef(ContextTransform(Button))
            ariaLabel="Download testImage.js"
            circle={true}
            onClick={[Function]}
            size={32}
            style={
              Object {
                "backgroundColor": "black",
              }
            }
          >
            <Icon
              append={false}
              ariaLabel={null}
              buttonClassName=""
              buttonProps={null}
              className=""
              color="white"
              description=""
              name="icon-arrow-tail-down_12"
              onClick={null}
              prepend={false}
              size={null}
              sizeOverride={false}
              style={null}
              title=""
              type=""
            />
          </ForwardRef(ContextTransform(Button))>
        </div>
      }
      aspect={null}
      className=""
      content="blob:localhost/testFile"
      failedText=""
      fileSize="1.47 MB"
      gifIcon=""
      height={null}
      icon="icon-document_72"
      isProtected={false}
      loading={true}
      loadingText="Loading"
      style={null}
      subtitle="Marty McFly, 12:10 PM"
      title="testImage.js"
      type="file"
      width={null}
    />
  </div>
</div>
`;
